# red_manipulation_step

./: .gitignore  LICENCE.md  README.md
arm_kinematics/: CMakeLists.txt  package.xml
arm_kinematics/include/arm_kinematics/: ArmKinematics.h  DataTypes.h  KinematicConstants.h
arm_kinematics/msg/: CertesianPose.msg
arm_kinematics/scenes/: grasp.ttt
arm_kinematics/src/: ArmKinematics.cpp
arm_kinematics/srv/: CameraFrame.srv  ManipulatorPose.srv  PoseArray.srv
arm_kinematics/tests/: TestNumIK.cpp
arm_manipulation/: CMakeLists.txt  package.xml
arm_manipulation/arduino_gripper/: arduino_take_grasp.ino
arm_manipulation/config/: calibration_info.yaml  trajectory_test_configuration.yaml
arm_manipulation/include/arm_manipulation/: youbot_manipulator.h
arm_manipulation/launch/: grasping_test.launch  launch_test.launch  start_action.launch  start_camera_calibration.launch  start_manipulation.launch  trajectory_test.launch
arm_manipulation/processing/: dataView.sce
arm_manipulation/src/: StartManipulation.cpp  TrajectoryMove_fn.cpp  move_by_camera.cpp  youbot_manipulator.cpp
arm_manipulation/srv/: MoveLine.srv
arm_manipulation/tests/: GraspingTest.cpp  MoveGripper.cpp  TrajectoryTest.cpp  goToInitAndRelax.cpp  logger.cpp  move_gripper.cpp  moving_belt.cpp  test.cpp  trajectoryActionTest.cpp  trajectorySecondActionTest.cpp  trajectory_test.cpp  translationTest.cpp
manipulation_control_node/: CMakeLists.txt  package.xml
manipulation_control_node/include/manipulation_control_node/: GraspingArmPositions.h  ManipulationControlNode.h
manipulation_control_node/src/: ManipulationControlNode.cpp  main.cpp
red_manipulation_step/: CMakeLists.txt  package.xml
scenes/: youbot_manipulator3.ttt
trajectory_generator/: CMakeLists.txt  package.xml
trajectory_generator/config/: TrajectoryState.yaml
trajectory_generator/include/trajectory_generator/: TrajectoryGenerator.h
trajectory_generator/launch/: joint_space_trajectory.launch  work_space_trajectory.launch
trajectory_generator/scilab/: Jacobian  JacobianCalc.wxmx  NumIKHardTest.sce  Trajectory.sce  angles_plot.sce  kinematic.sce  math.sce  numIKTest.sce  plot.sce  static_grasp.sce  sylinder.sce  test.sce
trajectory_generator/src/: Trajectory.cpp  TrajectoryGenerator.cpp
trajectory_generator/tests/: jointSpaceInterpolationTest.cpp  jointSpaceTrajectoryTest.cpp  multisegTest.cpp  workSpaceTrajectoryTest.cpp
