<?xml version="1.0"?>
<package>
  <name>arm_kinematics</name>
  <version>0.0.0</version>
  <description>The arm_kinematics package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="senserlex@todo.todo">senserlex</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>

    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>

</package>
