<?xml version="1.0"?>
<package>
  <name>manipulation_control_node</name>
  <version>0.0.0</version>
  <description>The manipulation_control_node package</description>
  <maintainer email="senex@todo.todo">senex</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>arm_kinematics</build_depend>
  <run_depend>arm_kinematics</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>std_srvs</build_depend>
  <run_depend>std_srvs</run_depend>

</package>